2010-08-15	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* src/uart-output-char.c: Add BSP_poll_char.

2010-07-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* umon/tfsDriver.c: Update for LibIO API changes.

2010-06-30	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* umon/tfsDriver.c: Remove extra brace.

2010-06-30	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* umon/tfsDriver.c: Corrected filesystem mknod entry to call the
	default handler.

2010-06-29	Jennifer.Averett <Jennifer.Averett@OARcorp.com>

	* umon/tfsDriver.c: Changed NULL methods in filesystem tables to be
	default methods.

2010-05-28	Ralf Corsépius <ralf.corsepius@rtems.org>

	* umon/tfsDriver.c:
	Use size_t instead of int for pathnamelen.

2010-05-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/utility.h: Macros use now first and last bit values instead
	of shift and length parameters.

2010-05-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/utility.h: Removed superfluous macros.

2010-05-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/uart-output-char.h, src/uart-output-char.c: New files.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/irq-config.h: Removed file.
	* include/irq.h: New file (renamed from 'include/irq-config.h').
	* include/irq-generic.h, src/irq-info.c: Include <bsp/irq.h> instead
	of <bsp/irq-config.h>.
	* src/irq-server.c: Use events instead of semaphore.  Added error
	counter for multiple chain appends.  Added error counter to detect
	erroneous interrupt events.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/bootcard.h: Documentation.

2010-04-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* gdbstub/rtems-stub-glue.c: Remove warnings.

2010-04-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* umon/umonrtemsglue.c: change type to avoid warning

2010-03-25	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* src/irq-generic.c: fix warning
